--- a/9/css/style.css
+++ b/9/css/style.css
@@ -290,7 +290,7 @@ img {
   font-size: 20px;
   line-height: 20px;
   font-weight: 500;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.03em;
   text-transform: uppercase;
   color: #000000;
   overflow: hidden;
@@ -337,7 +337,7 @@ img {
 @media (min-width: 1440px) {
   .main-navigation__item {
     display: inline-block;
-    padding: 69px 33px 88px 0;
+    padding: 69px 35px 88px 0;
     font-size: 20px;
     line-height: 30px;
     font-weight: 400;
@@ -369,13 +369,14 @@ img {
     position: absolute;
     width: 100%;
     height: 2px;
-    top: 37px;
+    top: 32px;
     left: 0;
     background-color: #68b738;
   }
 }
 @media (min-width: 768px) and (min-width: 1440px) {
   .main-navigation__link--active::after {
+    top: 37px;
     background-color: #ffffff;
   }
 }
@@ -471,6 +472,11 @@ img {
   }
 }
 
+.container-content--header {
+  width: auto;
+  margin: 0;
+  margin-top: 10px;
+}
 @media (min-width: 768px) {
   .container-content--header {
     width: 708px;
@@ -1112,7 +1118,7 @@ img {
 .example__title {
   margin: 0;
   padding: 0;
-  padding-top: 25px;
+  padding-top: 47px;
   padding-bottom: 40px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
@@ -1264,7 +1270,6 @@ img {
   inset: 0;
   cursor: pointer;
   opacity: 0;
-  /* for Firefox */
   width: 100%;
   height: 100%;
 }
@@ -1530,7 +1535,7 @@ img {
 }
 @media (min-width: 1440px) {
   .catalog__title {
-    padding: 0 0 70px;
+    padding: 0 0 69px;
   }
 }
 
@@ -1676,6 +1681,9 @@ img {
   }
 }
 
+.card-cart__image--small {
+  margin-top: 20px;
+}
 @media (min-width: 768px) {
   .card-cart__image--small {
     margin-top: 26px;
@@ -1684,6 +1692,7 @@ img {
 @media (min-width: 1440px) {
   .card-cart__image--small {
     margin: 0;
+    margin-top: -2px;
   }
 }
 
@@ -1707,7 +1716,7 @@ img {
   margin: 0;
   padding: 0;
   padding-bottom: 14px;
-  padding-right: 34px;
+  padding-right: 35px;
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-size: 16px;
@@ -1722,7 +1731,7 @@ img {
     font-size: 20px;
     line-height: 24px;
     padding-left: 45px;
-    padding-bottom: 20px;
+    padding-bottom: 21px;
     width: 165px;
     text-align: center;
     box-sizing: content-box;
@@ -1809,15 +1818,24 @@ img {
   }
 }
 
-.card-cart--loadmore__image {
+.card-cart__image--loadmore {
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding-top: 4px;
+  object-fit: contain;
 }
 @media (min-width: 768px) {
-  .card-cart--loadmore__image {
+  .card-cart__image--loadmore {
+    min-height: auto;
+    min-width: auto;
     width: 60px;
+    margin-bottom: -2px;
+  }
+}
+@media (min-width: 1440px) {
+  .card-cart__image--loadmore {
+    margin-bottom: 0;
   }
 }
 
@@ -1873,7 +1891,7 @@ img {
 }
 @media (min-width: 768px) {
   .add-goods {
-    padding: 83px 0 19px;
+    padding: 81px 0 19px;
     margin-bottom: 53px;
   }
 }
@@ -1932,6 +1950,15 @@ img {
     height: 3px;
     background-color: #68b738;
   }
+  .add-goods__title::after {
+    content: "";
+    position: absolute;
+    top: 21px;
+    left: -40px;
+    width: 40px;
+    height: 7px;
+    background-color: #ffffff;
+  }
 }
 @media (min-width: 1440px) {
   .add-goods__title {
@@ -1956,7 +1983,6 @@ img {
 @media (min-width: 768px) {
   .add-goods__title-text {
     padding-right: 38px;
-    padding-left: 38px;
   }
 }
 
@@ -2007,7 +2033,7 @@ img {
   .add-goods__item::after {
     content: "";
     position: absolute;
-    top: -27px;
+    top: -28px;
     left: -38px;
     width: 706px;
     height: 138px;
@@ -2843,10 +2869,10 @@ img {
   outline: none;
   border: 2px solid #444444;
 }
-.form-email-phone__field-text:focus ~ .form-email-phone__field-icon--email {
+.form-email-phone__field-text:focus ~ .form-email-phone__field-icon--email path {
   stroke: #68b738;
 }
-.form-email-phone__field-text:focus ~ .form-email-phone__field-icon--phone {
+.form-email-phone__field-text:focus ~ .form-email-phone__field-icon--phone path {
   fill: #68b738;
 }
 @media (min-width: 768px) {
@@ -2861,14 +2887,14 @@ img {
 .form-email-phone__field-text--error-email {
   border: 2px solid #ff8282;
 }
-.form-email-phone__field-text--error-email ~ .form-email-phone__field-icon--email {
+.form-email-phone__field-text--error-email ~ .form-email-phone__field-icon--email path {
   stroke: #ff8282;
 }
 
 .form-email-phone__field-text--error-phone {
   border: 2px solid #ff8282;
 }
-.form-email-phone__field-text--error-phone ~ .form-email-phone__field-icon--phone {
+.form-email-phone__field-text--error-phone ~ .form-email-phone__field-icon--phone path {
   fill: #ff8282;
 }
 
